==> aabzel/trunk/source/mcal/mcal_mik32/uart/uart_mcal.c <==
#include "uart_mcal.h"
#include <stddef.h>
#include <stdint.h>
#include <stdio.h>
#include <stdlib.h>
#include <string.h>
#include "bit_utils.h"
#include "code_generator.h"
#include "hal_diag.h"
#include "hal_mcal.h"
#include "log.h"
#include "mik32_hal_irq.h"
#include "mik32_hal_usart.h"
#include "uart_custom_drv.h"
#include "uart_lib.h"
#include "led_drv.h"
#include "time_mcal.h"
#include "uart_custom_types.h"
#include "string_reader.h"
#include "timer_mcal.h"
#include "cli_config.h"
#include "string_reader.h"
#include "sys_config.h"

bool uart_send_wait_ll(UartHandle_t* Node, const uint8_t* const data, uint16_t size) {
    bool res = false;
    if(Node) {
        uint32_t i = 0;
        for(i = 0; i < size; i++) {
            Node->tx_done = false;
            HAL_USART_WriteByte(&(Node->Handle), (char)data[i]);
            res = uart_wait_tx_done_ll(Node);
            // wait_us(10); //10< < 70 500-ok
            // res = HAL_USART_Transmit(&(Node->Handle), (char) data[i], 0xFFFF);
        }
        res = true;
    }
    return res;
}

bool uart_init_one(uint8_t num) {
    bool res = false;
    const UartConfig_t* Config = UartGetConfig(num);
    if(Config) {// TOGO verify config
        UartHandle_t* Node = UartGetNode(num);
        if(Node) {
            UartInfo_t* Info = UartGetInfo(num);
            if(Info) {
                Node->UARTx = Info->UARTx;
                Node->irq_n = Info->irq_n;
                uint32_t mask = (1U << Info->irq_n);
                PM->CLK_APB_P_SET = mask; // PM_CLOCK_APB_P_UART_1_M
                res = uart_init_general_one(Config, Node);
                if(res) {
                    res = UartConfigToMik32UartCfg(Config, &Node->Handle);
                }
                if(res) {
                    HAL_StatusTypeDef ret = HAL_USART_Init(&(Node->Handle));
                    res = MIK32_HalRetToRes(ret);
                }
                if(res) {
                    /*Enable interrupts on "receiver register not empty" */
                    HAL_USART_TXC_EnableInterrupt(&(Node->Handle));
                    HAL_USART_RXNE_EnableInterrupt(&(Node->Handle));
                    // HAL_USART_PE_EnableInterrupt(&(Node->Handle));
                    // HAL_USART_TXE_EnableInterrupt(&(Node->Handle));
                    // HAL_USART_IDLE_EnableInterrupt(&(Node->Handle));
                    // HAL_USART_RX_Break_EnableInterrupt(&(Node->Handle));
                    // HAL_USART_CTS_EnableInterrupt(&(Node->Handle));
                }
                Node->init_done = true;
                char debug_text[200] = {0};
                debug_text[0] = 'U';
                debug_text[1] = 'A';
                debug_text[2] = 'R';
                debug_text[3] = 'T';
                debug_text[4] = 0x30 + num;
#ifdef HAS_LOG
                snprintf(debug_text, sizeof(debug_text), "%s,HelloFrom UART%u\r\n", debug_text, num);
#else
                res = uart_send_wait_ll(Node, (uint8_t*)debug_text, 6);
#endif
                // led_mono_ctrl(2, true);
            }
        }
    } // config
    return res;
}
